// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SChip.vue base can have color gold 1`] = `
<div class="chip chip--color-gold">
  <div class="chip__content">Chip content</div>
  <!---->
</div>
`;

exports[`SChip.vue base can have color green 1`] = `
<div class="chip chip--color-green">
  <div class="chip__content">Chip content</div>
  <!---->
</div>
`;

exports[`SChip.vue base can have color grey 1`] = `
<div class="chip chip--color-grey">
  <div class="chip__content">Chip content</div>
  <!---->
</div>
`;

exports[`SChip.vue base can have color ice 1`] = `
<div class="chip chip--color-ice">
  <div class="chip__content">Chip content</div>
  <!---->
</div>
`;

exports[`SChip.vue base can have color magenta 1`] = `
<div class="chip chip--color-magenta">
  <div class="chip__content">Chip content</div>
  <!---->
</div>
`;

exports[`SChip.vue base can have color night 1`] = `
<div class="chip chip--color-night">
  <div class="chip__content">Chip content</div>
  <!---->
</div>
`;

exports[`SChip.vue base can have color red 1`] = `
<div class="chip chip--color-red">
  <div class="chip__content">Chip content</div>
  <!---->
</div>
`;

exports[`SChip.vue base can have color spartan_blue 1`] = `
<div class="chip chip--color-spartan_blue">
  <div class="chip__content">Chip content</div>
  <!---->
</div>
`;

exports[`SChip.vue base can have color turquoise 1`] = `
<div class="chip chip--color-turquoise">
  <div class="chip__content">Chip content</div>
  <!---->
</div>
`;

exports[`SChip.vue base can have color white 1`] = `
<div class="chip chip--color-white">
  <div class="chip__content">Chip content</div>
  <!---->
</div>
`;

exports[`SChip.vue base can have its HTML tag set 1`] = `
<li class="chip">
  <div class="chip__content">Slot content</div>
  <!---->
</li>
`;

exports[`SChip.vue base renders correctly 1`] = `
<div class="chip">
  <div class="chip__content">Slot content</div>
  <!---->
</div>
`;

exports[`SChip.vue closable can be closable 1`] = `
<div class="chip">
  <div class="chip__content">Slot content</div> <button class="button chip__close button--color-ice button--size-small button--has-icon button--icon-only">
    <!---->
    <sicon icon="x" class="button__icon button__icon--left"></sicon>
    <!---->
    <!---->
  </button>
</div>
`;
